--- a/mallproject-gateway/src/main/resources/application.yml
+++ b/mallproject-gateway/src/main/resources/application.yml
@@ -11,10 +11,12 @@ spring:
 #          uri: https://www.baidu.com
 #          predicates:
 #            - After=2017-01-20T17:42:47.789-07:00[America/Denver]
-        - id: qq_route
-          uri: https://www.qq.com
+        - id: admin_route
+          uri: lb://renren-fast
           predicates:
-            - Query=foo
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
 
 server:
   port: 88
