--- a/mallproject-gateway/src/main/resources/application.yml
+++ b/mallproject-gateway/src/main/resources/application.yml
@@ -11,6 +11,13 @@ spring:
 #          uri: https://www.baidu.com
 #          predicates:
 #            - After=2017-01-20T17:42:47.789-07:00[America/Denver]
+        - id: product_route
+          uri: lb://mall-product
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
+
         - id: admin_route
           uri: lb://renren-fast
           predicates:
